fix(description.module.scss): keyboard covers toolbar

--- a/apps/web/src/pages/project/components/description/description.module.scss
+++ b/apps/web/src/pages/project/components/description/description.module.scss
@@ -6,9 +6,9 @@
 
 .fullscreen {
   position: fixed;
-  overflow: scroll;
+  overflow: auto;
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   z-index: 92;
   top: 0;
   left: 0;
